<resources>
    <string name="app_name">CMPT 276 - Restaurant Inspectors</string>
    <string name="num_crit">%1$d critical violations </string>
    <string name="num_non_crit">%1$d non-critical violations </string>
    <string name="a_brief_description_of_violation_needs_changed">A brief description of violation(needs changed)</string>
    <string name="icon_for_the_severity_of_violation">icon for the severity of violation</string>
    <string name="icon_for_nature_of_violations">icon for nature of violations</string>
    <string name="details_of_inspection">Details of Inspection</string>
    <string name="date">Date: %1$s</string>
    <string name="inspection_type">Inspection type:</string>
    <string name="type_inspection">Inspection type: %1$s</string>
    <string name="image_of_hazard">image of hazard</string>
    <string name="hazard_level_in_word_and_color_coded">hazard level in word</string>
    <string name="restaurants">Restaurants In Surrey</string>
    <string name="icon_for_hazard_level">icon for hazard level</string>
    <string name="Time_since_inspection">Last inspection:</string>
    <string name="Inspection_Time">Last inspection: %1$s</string>
    <string name="no_inspection_date">Last inspection: N.A. </string>
    <string name="icon_for_restaurant_general">icon for restaurant(general)</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="icon_for_warning">icon for warning</string>
    <string name="num_violations">%1$d violations found</string>
    <string name="time_since_inspection">Inspection Date: %1$s</string>
    <string name="restaurant_detail">Restaurant Detail</string>
    <string name="gps">GPS: %1$f, %2$f </string>
    <string name="name">Name: %1$s</string>
    <string name="address">Address: %1$s</string>
    <string name="Hazard_Level_Moderate">Hazard level is Moderate</string>
    <string name="Hazard_Level_High">Hazard level is High</string>
    <string name="Hazard_Level_Low">Hazard level is low</string>
    <string name="inspection_detail_back">Back</string>
    <string name="restaurant_detail_back">Back</string>
    <string name="violation_description101">Invalid construction</string>
    <string name="violation_description102">Unapproved premises</string>
    <string name="violation_description103">Invalid permit</string>
    <string name="violation_description104">Permit not visible</string>
    <string name="violation_description201">Contaminated food</string>
    <string name="violation_description202">Improper food processing</string>
    <string name="violation_description203">Food improperly cooled</string>
    <string name="violation_description204">Food heated incorrectly</string>
    <string name="violation_description205">Food not cold enough</string>
    <string name="violation_description206">Food not hot enough</string>
    <string name="violation_description208">Unapproved food</string>
    <string name="violation_description209">Unprotected food</string>
    <string name="violation_description210">Improper thawing</string>
    <string name="violation_description211">Improper storage of frozen food</string>
    <string name="violation_description212">No written procedures provided</string>
    <string name="violation_description301">Unsanitary surfaces</string>
    <string name="violation_description302">Improper cleaning</string>
    <string name="violation_description303">Water temperature not sufficient</string>
    <string name="violation_description304">Pests found</string>
    <string name="violation_description305">Conditions allow pests</string>
    <string name="violation_description306">Premises unsanitary</string>
    <string name="violation_description307">Surfaces unsuitable</string>
    <string name="violation_description308">Equipment non-functional</string>
    <string name="violation_description309">Chemicals improperly handled</string>
    <string name="violation_description310">Single-use items used 2+ times</string>
    <string name="violation_description311">Premises not maintained</string>
    <string name="violation_description312">Non-food items found</string>
    <string name="violation_description313">Live Animals on premise</string>
    <string name="violation_description314">No written sanitation procedures</string>
    <string name="violation_description315">No refrigerator thermometers</string>
    <string name="violation_description401">Inadequate handwashing stations</string>
    <string name="violation_description402">Inappropriate handwashing</string>
    <string name="violation_description403">Bad employee hygiene</string>
    <string name="violation_description404">Smoking in food areas</string>
    <string name="violation_description501">Operator isn\'t FOODSAFE</string>
    <string name="violation_description502">Staff isn\'t FOODSAFE</string>
    <string name="month_jan">January</string>
    <string name="month_feb">February</string>
    <string name="month_mar">March</string>
    <string name="month_apr">April</string>
    <string name="month_may">May</string>
    <string name="month_jun">June</string>
    <string name="month_jul">July</string>
    <string name="month_aug">August</string>
    <string name="month_sep">September</string>
    <string name="month_oct">October</string>
    <string name="month_nov">November</string>
    <string name="month_dec">December</string>
    <string name="days_ago"> days ago</string>
    <string name="unknown_violation">UNKNOWN VIOLATION</string>
    <string name="title_activity_maps">RestInspect</string>
    <string name="menu_map">Map</string>
    <string name="menu_restaurant_list">Restaurant List</string>
    <string name="update_prompt">There is new data available, would you like to download now?</string>
    <string name="updating">Updating …</string>
    <string name="cancel">Cancel</string>
    <string name="leave_update_activity">Continue</string>
    <string name="update_complete">Update Complete!</string>
    <string name="image_button_for_list_view">image button for list view</string>
    <string name="yes">Yes</string>
    <string name="search_in_favourites">Search in favourites</string>
    <string name="low">Low</string>
    <string name="moderate">Moderate</string>
    <string name="critical">Critical</string>
    <string name="hazard_level_of_most_recent_inspection">Hazard Level of most recent inspection</string>
    <string name="save_criteria">Save Criteria</string>

    <string name="update">update</string>
    <string name="Leave_update_activity">continue</string>
    <string name="Address">Address: </string>
    <string name="No_inspections_found">\nNo inspections found</string>
    <string name="Hazard_level">\nHazard Level:</string>
    <string name="Update_Available">Update Available</string>
    <string name="name_search">Name</string>
    <string name="ex_pizza">ex: pizza</string>
    <string name="minimum_critical_violations_inclusive">Minimum critical violations (inclusive)</string>
    <string name="maximum_critical_violations_inclusive">Maximum Critical Violations (inclusive)</string>
    <string name="search">Search</string>
    <string name="ex_6">ex: 6</string>
    <string name="search_map">search map</string>
    <string name="clear_search">Clear Search</string>
    <string name="high">High</string>
    <string name="ok">Okay</string>
    <string name="no">Cancel</string>

    <string name="inputError">The maximum number of violations cannot be less than the minimum number of violations</string>
    <string name="locsationPermissionDenied">Unable to get device location, please check your permissions within settings</string>
    <string name="attention">Attention!</string>
    <string name="favourite_message">There are new inspections for your favourite restaurants.\n\nClick OK to see them.</string>

    <string name="Updated_favourites">Updated Favourites</string>
    <string name="Search_screen">Search Screen</string>
</resources>