<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="group17.cmpt276.iteration3.UI.OptionsScreen">

    <RadioButton
        android:id="@+id/favouriteCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.087"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.094"></RadioButton>

    <TextView
        android:id="@+id/favouriteLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_in_favourites"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/favouriteCheck"
        app:layout_constraintStart_toStartOf="@+id/favouriteCheck" />


    <RadioGroup
        android:id="@+id/favouriteRadioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.097"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.267">

        <RadioButton
            android:id="@+id/hazard_low"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/low"></RadioButton>

        <RadioButton
            android:id="@+id/hazard_moderate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/moderate"></RadioButton>

        <RadioButton
            android:id="@+id/hazard_critical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/critical"></RadioButton>
    </RadioGroup>

    <TextView
        android:id="@+id/hazardLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hazard_level_of_most_recent_inspection"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/favouriteRadioButton"
        app:layout_constraintStart_toStartOf="@+id/favouriteRadioButton" />

</androidx.constraintlayout.widget.ConstraintLayout>