<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.InspectionDetail">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_detail_inspection"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/InspectionDetailLayout"
        android:layout_width="0dp"
        android:layout_height="205dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/guideline_inspection_h"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/txtDate"
            android:layout_width="389dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="3dp"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="21dp"
            android:text="@string/date"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtInspectionType"
            android:layout_width="391dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtNonCriticalViolation"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="6dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="16dp"
            android:text="@string/inspection_type"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtCriticalViolation"
            android:layout_width="390dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtDate"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="18dp"
            android:text="@string/num_crit"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtNonCriticalViolation"
            android:layout_width="389dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtCriticalViolation"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="19dp"
            android:text="@string/num_non_crit"
            android:textSize="14sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/hazardIcon2"
            android:layout_width="53dp"
            android:layout_height="43dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="139dp"
            android:layout_marginEnd="349dp"
            android:contentDescription="@string/image_of_hazard"
            app:srcCompat="@drawable/ic_warning_critical" />

        <TextView
            android:id="@+id/txtHazard"
            android:layout_width="320dp"
            android:layout_height="30dp"
            android:layout_below="@+id/txtInspectionType"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="56dp"
            android:layout_marginTop="23dp"
            android:layout_marginEnd="26dp"
            android:text="@string/hazard_level_in_word_and_color_coded" />

    </RelativeLayout>

    <ListView
        android:id="@+id/violationListView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/InspectionDetailLayout" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_inspection_h"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="267dp" />

</androidx.constraintlayout.widget.ConstraintLayout>