<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.RestaurantDetailsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_restaurant_detail"
        android:layout_width="0dp"
        android:layout_height="49dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/RestaurantDetaillinearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/guideline_RestaurantDetail_h"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_restaurant_detail">

        <TextView
            android:id="@+id/txtRestaurantName"
            android:layout_width="381dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="39dp"
            android:text="@string/name"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtRestaurantAddress"
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtRestaurantName"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="18dp"
            android:layout_marginTop="3dp"

            android:layout_marginEnd="10dp"
            android:text="@string/address"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/txtRestaurantGPS"
            android:layout_width="364dp"
            android:layout_height="26dp"
            android:layout_below="@+id/txtRestaurantAddress"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="17dp"
            android:layout_marginTop="9dp"
            android:layout_marginEnd="14dp"
            android:text="@string/gps"
            android:textSize="14sp" />

    </RelativeLayout>

    <ListView
        android:id="@+id/inspectionListView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RestaurantDetaillinearLayout" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_RestaurantDetail_h"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="137dp" />

</androidx.constraintlayout.widget.ConstraintLayout>